# python-gcp-app

./: README.md  cloudbuild.yaml  pyproject.toml
